<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/campaignView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/lg_campaignview"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/campaingHeader"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/lg_campaignviewtop"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/closeButton"
                android:layout_width="35dp"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:adjustViewBounds="true"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/close" />

            <LinearLayout
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:orientation="vertical"
                android:animateLayoutChanges="true">

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:visibility="invisible"/>

                <TextView
                    android:id="@+id/brandName"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textAlignment="center"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/text_brandName"
                    android:visibility="invisible" />
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/spinnerContainer"
                android:layout_width="110dp"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="start"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="15dp"
                android:gravity="start"
                android:visibility="invisible">

                <android.support.v7.widget.AppCompatSpinner
                    android:id="@+id/spinnerLang"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginStart="0dp"
                    android:dropDownVerticalOffset="5dp"
                    android:dropDownWidth="110dp"
                    android:gravity="start"
                    android:paddingTop="5dp"
                    android:spinnerMode="dropdown"
                    android:textSize="@dimen/text_medium"

                    />
            </RelativeLayout>

            <TextView
                android:id="@+id/qstnCount"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_gravity="end"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginRight="15dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/text_medium" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/widgetContainerMain"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="4"
            android:layout_marginBottom="5dp">

            <LinearLayout
                android:id="@+id/widgetContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3.2"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

            </LinearLayout>

            <TextView
                android:id="@+id/txtValidationMsg"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:visibility="invisible"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#f33e6f"
                android:textSize="11sp"/>

            <RelativeLayout
                android:id="@+id/bottomButtonContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="bottom"
                android:layout_weight=".8"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:id="@+id/btnContainer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:animateLayoutChanges="true"
                    android:gravity="center"
                    android:orientation="horizontal">

                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/footerCredits"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/lg_campaignviewbottom"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </LinearLayout>
</RelativeLayout>